--- a/a.css
+++ b/a.css
@@ -25,8 +25,8 @@ body{
 
   .text1 p::after {
     content: "";
-    width: 9px;
-    height: 1rem;
+    width: 0.6rem;
+    height: 0.2rem;
     background: white;
     display: inline-block;
   }
