--- a/a.css
+++ b/a.css
@@ -6,7 +6,7 @@
 
 body{
     font-family: Consolas;
-    white-space: pre-wrap;
+    white-space: break-spaces;
     background-color: black;
     color: white;
     height: 100%;
